--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,9 @@
 body {
     font-family: 'Lato', sans-serif;
     
+    background: #f6f8fa;
     margin: 0;
+    color: #24292e;
 }
 
 .title {
@@ -22,8 +24,25 @@ body {
 
 .search {
     display: flex;
-    justify-content: center;
     align-items: center;
+    background: white;
+    justify-content: center;
+
+    padding: 6px;
+}
+
+.tab {
+    color: teal;
+    text-decoration: none;
+    font-weight: bold;
+    
+    padding: 12px;
+    margin-right: 6px;
+}
+
+.tab:hover {
+    background: teal;
+    color: white;
 }
 
 .search-box {
@@ -31,23 +50,27 @@ body {
     align-items: center;
     justify-content: space-between;
 
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    /*box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);*/
+    border: 1px solid #e1e4e8;
     border-radius: 6px;
-
-    margin: 16px;
-
-    width: 100%;
-    max-width: 520px;
 }
 
 #search {
     border: none;
     font: inherit;
+    font-weight: 700;
+    color: #24292e;
 
     border-radius: 6px;
+    background: inherit;
 
     padding: 12px;
     flex-grow: 1
+}
+
+.search-box:focus-within {
+    transition: 200ms;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
 }
 
 #search-btn {
@@ -82,6 +105,9 @@ body {
 
 .result {
     margin: 8px;
+    background: white;
+    border: 1px solid #e1e4e8;
+    border-radius: 6px;
 }
 
 .result-header {
@@ -89,10 +115,8 @@ body {
     align-items: center;
     justify-content: space-between;
 
-    background: #1552ad;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
-    color: white;
 }
 
 .result-title {
@@ -102,15 +126,7 @@ body {
 
 .result-mal {
     padding: 12px;
-    color: white;
-}
-
-.result-body {
-    border: 1px solid #d3d3d3;
-    border-top: 0;
-
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
+    color: teal;
 }
 
 .theme {
@@ -128,6 +144,7 @@ body {
 
 .theme:hover {
     background: #f5f5f5;
+    color: teal;
 }
 
 .theme-title {
@@ -135,9 +152,16 @@ body {
     flex-direction: column;
 }
 
+.theme-episodes {
+    color: #586069;
+}
+
+.theme-notes {
+}
+
 .title-sub {
     font-size: .7em;
-    color: #818181;
+    color: #586069;
 }
 
 footer {
@@ -149,4 +173,12 @@ footer {
 footer a {
     color: teal;
     text-decoration: none;
+}
+
+.inactive {
+    color: #bdbfc2;;
+}
+
+.inactive:hover {
+    cursor: not-allowed;
 }
