--- a/views/partials/search.hbs
+++ b/views/partials/search.hbs
@@ -1,6 +1,6 @@
 <div class="search">
     <a href="/" class="tab">anithemes</a>
-    <a href="/" class="tab inactive">Shuffle</a>
+    <a href="/random" class="tab">Shuffle</a>
     <a href="/" class="tab inactive">Years</a>
     <div class="search-box">
         <input id="search" type="text" placeholder="Search for anime">
