--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,5 +1,3 @@
-{{> search}}
-
 <div class="results">
     <div class="sorting">
         <span>Sort by:</span>
@@ -29,6 +27,4 @@
     {{/each}}
 </div>
 
-{{> footer}}
-
-<script src="./js/results.js"></script>
+<script src="/js/results.js"></script>
